# opengl_stduy

./: 01application.h  01opengl.cpp  02application.cpp  02opengl.cpp  03cmakelists.txt  03opengl.cpp  04opengl.cpp  CMakeLists.txt  README.md  checkError.cpp  checkError.h  wrapper_cmakelists.txt
